charts/kyverno-policies/tests/deny-no-traffic-distribution/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-no-traffic-distribution
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - kind: Service
    policy: deny-no-traffic-distribution
    resources:
      - service-with-prefer-same-zone
    result: pass
    rule: service-without-traffic-distribution
  - kind: Service
    policy: deny-no-traffic-distribution
    rule: deny-no-traffic-distribution
    resources:
      - service-with-prefer-same-node
    result: pass

  - kind: Service
    policy: deny-no-traffic-distribution
    rule: deny-no-traffic-distribution
    resources:
      - service-without-traffic-distribution
    result: fail

  - kind: Service
    policy: deny-no-traffic-distribution
    rule: deny-no-traffic-distribution
    resources:
      - service-with-invalid-traffic-distribution
    result: fail

  - kind: Service
    policy: deny-no-traffic-distribution
    rule: deny-no-traffic-distribution
    resources:
      - service-with-empty-traffic-distribution
    result: fail
